--- a/index.html
+++ b/index.html
@@ -4,59 +4,87 @@
 		<title>Ruthwik Kancharla | B.Tech</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no	">
+		<link rel="stylesheet" type="text/css" href="E:\Study\Web Dev Internship Studio\Ruthwik_Resume\assets\styles\style.css">
+		<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=B612:ital,wght@0,400;0,700;1,400;1,700&family=BioRhyme:wght@200;300;400;800&family=Fjalla+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Varela&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<nav>
 			<ul>
-				<li>Home</li>
-				<li>About</li>
-				<li>Education</li>
-				<li>Skills</li>
-				<li>Hobbies</li>
-				<li>Contact</li>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#education">Education</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#hobbies">Hobbies</a></li>
+				<li><a href="#contact">Contact Me!</a></li>
 			</ul>
 		</nav>
-		<div>
+		<section>
+			<section class="home" id="home">
+		<div class="inner">
+			<img  src="E:\Study\Web Dev Internship Studio\Ruthwik_Resume\assets\img\profile pic icon.png"/>
 			<h1>Ruthwik Kancharla</h1>
 		</div>
-		<div>
+	</section>
+	<section class="about">
+		<div class="inner">
 			<h1>About</h1>
 			<p>
-				I'm currently studying Computer Science at Amrita University.<br> I am curious about technologies, and I love to adventure new things.<br> I am currently learning Front End in Web Development.<br> More coming soon 😉
+				I'm currently studying Computer Science at Amrita University.<br> I like spending time friends and also I want to explore new places throughout the world.<br>I am curious about technologies, and I love to adventure new things.<br> I am currently learning Front End in Web Development.<br>I am currently designing a website about my bio. <br>I am keen in doing an internship in Web Development.<br> More coming soon 😉
 			</p>
 		</div>
-		<div>
+	</section>
+		<section class="education" id="education">
+			<div class="inner">
+			<h1>Education</h1>
 			<div>
-				<h1>Education</h1>
-				<h1>Schooling : Sri Prakash Vidyaniketan</h1>
-				<h2>CBSE</h2>
-				<h3>CGPA : 9.8</h3>
+				<img src="E:\Study\Web Dev Internship Studio\Ruthwik_Resume\assets\img\school.png" />
+				<h2>Sri Prakash Vidyaniketan</h2>
+				<p>CBSE</p>
+				<p>CGPA : 9.8</p>
 			</div>
 			<div>
-				<h1>Intermediate : Narayana Junior College</h1>
-				<h2>SSC | MPC</h2>
-				<h3>CGPA : 9.7</h3>
+				<img src="https://heylangu.com/images/education-icon-home.svg?v=1548322879110" />
+				<h2>Narayana Junior College</h2>
+				<p>SSC | MPC</p>
+				<p>CGPA : 9.7</p>
 			</div>
 			<div>
-				<h1>Graduation : Amrita School of Engineering</h1>
-				<h2>Computer Science of Engineering</h2>
-				<h3>CGPA : 9.5(as of now 😅)</h3>
+			<img src="https://image.flaticon.com/icons/png/512/42/42972.png" />
+				<h2>Amrita School of Engineering</h2>
+				<p>Computer Science of Engineering</p>
+				<p>CGPA : 9.5(as of now 😅)</p>
+			</div>
+			</div>
+		</section>
+		<section class="hobbies" id="hobbies">
+			<div class="inner">
+			<h1>Hobbies</h1>
+			<div>
+					<img src="https://cdn.iconscout.com/icon/free/png-256/play-game-675401.png" />
+					<p> Playing Games </p>
+			</div>
+			<div>
+					<img src="E:\Study\Web Dev Internship Studio\Ruthwik_Resume\assets\img\music.png" />
+					<p> Listening Songs</p>
+			</div>
+			<div>
+					<img src="E:\Study\Web Dev Internship Studio\Ruthwik_Resume\assets\img\movies.png" />
+					<p> Watching Movies </p>
+			</div>
+			<div>
+					<img src="E:\Study\Web Dev Internship Studio\Ruthwik_Resume\assets\img\badminton.png" />
+					<p> Playing Badminton</p>
 			</div>
 		</div>
-		<div>
+		</section>
+		<section class="skills" id="skills">
+			<div class="inner">
 			<h1>Skills</h1>
 			<div>
 				<ul>
 					<li>HTML</li>
 					<li>CSS</li>
 					<li>Javascript</li>
-				</ul>
-			</div>
-			<div>
-				<ul>
-					<li>Wordpress</li>
-					<li>Bootstrap</li>
-					<li>Foundation</li>
 				</ul>
 			</div>
 			<div>
@@ -73,18 +101,9 @@
 				</ul>
 			</div>
 		</div>
-		<div>
-			<h1>Hobbies</h1>
-			<div>
-				<ul>
-					<li>Playing games</li>
-					<li>Listening songs</li>
-					<li>Watching movies</li>
-					<li>Playing Badminton</li>
-				</ul>
-			</div>
-		</div>
-		<div>
+		</section>
+		<section class="contact" id="contact">
+			<div class="inner">
 			<h1>Contact Me!</h1>
 			<p>
 				Email : ruthwikiso@gmail.com <br>
@@ -92,5 +111,7 @@
 				Linked In : Ruthwik Kancharla <br>
 			</p>
 		</div>
+		</section>
+	</section>
 	</body>
 </html>
